--- a/metadata.yaml
+++ b/metadata.yaml
@@ -46,5 +46,6 @@ subjects:
 - !lcsh 'Women -- Italy -- Florence -- Fiction'
 - !lcsh 'Savonarola, Girolamo, 1452-1498 -- Fiction'
 - !lcsh 'Psychological fiction'
+- GITenberg
 title: Romola
 url: http://www.gutenberg.org/ebooks/24020
